# formation_OC

projet 2/: .gitignore  huggingface_api_cloth_seg.ipynb  main.py  pyproject.toml
projet 3/: P3_template_modelistation_supervisee_data_scientist.ipynb  pyproject.toml
