[project]
name = "projet-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
]
